2013-09-17  DJ Delorie  <dj@redhat.com>

	* config/rl78/constraints.md (Wcv): Allow up to $r31.
	* config/rl78/rl78.c (rl78_asm_file_start: Likewise.
	(rl78_option_override): Likewise, if -mallregs.
	(is_virtual_register): Likewise.
	* config/rl78/rl78.h (reg_class): Extend VREGS to $r31.
	(REGNO_OK_FOR_BASE_P): Likewise.
	* config/rl78/rl78.opt (-mallregs): New.

2013-09-17  Nick Clifton  <nickc@redhat.com>

	* config/rl78/rl78.c (need_to_save): Change return type to bool.
	For interrupt functions: save all call clobbered registers if the
	interrupt handler is not a leaf function.
	(rl78_expand_prologue): Always recompute the frame information.
	For interrupt functions: only select bank 0 if one of the bank 0
	registers is going to be psuhed.

2013-09-17  DJ Delorie  <dj@redhat.com>

	* config/rl78/constraints.md: For each W* constraint, rename to C*
	and create a W* constraint that checks for an optional ES: prefix
	pattern also.
	* config/rl78/rl78.md (UNS_ES_ADDR): New.
	(es_addr): New.  Used to wrap far addresses.
	* config/rl78/rl78-protos.h (rl78_es_addr): New.
	(rl78_es_base): New.
	* config/rl78/rl78.c (rl78_as_legitimate_address): Accept "unspec"
	wrapped far addresses.
	(rl78_print_operand_1): Unwrap far addresses before processing.
	(rl78_lo16): Wrap far addresses in unspecs.
	(rl78_es_addr): New.
	(rl78_es_base): New.
	(insn_ok_now): Check for not-yet-wrapped far addresses.
	(transcode_memory_rtx): Properly re-wrap far addresses.

2013-09-17  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* config/sparc/t-rtems: Add leon3 multilibs.

2013-09-17  Cong Hou  <congh@google.com>

	* tree-vect-patterns.c (vect_recog_dot_prod_pattern): Fix a bug
	when checking the dot production pattern. The type of rhs operand
	of multiply is now checked correctly.

2013-09-17  Jeff Law  <law@redhat.com>

	* tree-ssa-dom.c (cprop_into_successor_phis): Also propagate
	edge implied equivalences into successor phis.